Adopt library working instructions and Java 17 baseline
Adapt the sibling openfire-spiffing-plugin AGENTS.md for this standalone
library. Require automatic commits with detailed explanations and test
results, relevant regression coverage, Maven verification, and maintenance
of doc/design.md. Replace plugin/JSP guidance with library packaging and
Java 17 compatibility checks, respecting the user's selected Openfire
minimum and preserving unrelated working-tree changes.

Document architecture, policy ownership, validation and access semantics,
markings, equivalence, wire formats, dependency choices, test coverage,
and known compatibility limitations. Link these documents from README.

Include the pending Java 17 baseline change: set Maven release to 17,
replace List.getFirst() with get(0) behind existing nonempty checks, and
update the documented minimum runtime. Add a regression proving that
permissive tags with identical names in different tagsets each require
a matching clearance privilege.

Validation: ran JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64 mvn -o clean
verify on OpenJDK 17. All 47 tests passed (31 upstream scenarios and 16
focused tests); JAR packaging succeeded. Inspected all 26 packaged class
files and confirmed class-file version 61 (Java 17), and verified that
the JAR includes META-INF/LICENSE. git diff --check passed.

Bouncy Castle 1.84 and test-only JUnit Jupiter 6.1.0 compiled and ran on
Java 17. No live C++ differential run or deployed Openfire integration
check was performed; those limitations are recorded in the design.